<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.classselection2.Summary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:context="com.example.janetaa.courseselectionapp.Summary"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="43dp"
            android:text="@string/sumName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="21dp"
            android:text="@string/sumPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sumBirth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:text="@string/sumDegree"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="19dp"
            android:text="@string/sumMajor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="281dp"
            android:layout_height="41dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/sumNext"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txtStudent"
            android:layout_width="154dp"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="43dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintLeft_toRightOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="157dp"
            android:layout_height="34dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="19dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStudent"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txtBirthdate"
            android:layout_width="159dp"
            android:layout_height="33dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="28dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintLeft_toRightOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txtDegree"
            android:layout_width="162dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="21dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBirthdate"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txtMajor"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:text="TextView"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintLeft_toRightOf="@+id/textView6"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDegree"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/txtClassSchedule"
            android:layout_width="347dp"
            android:layout_height="115dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
